settings: Fix settings inputs broken in mobile sizes.
In 84e307581f8aa1335cb8b6d5e47f2bc958295fee, we removed the HTML that
these CSS rules applied to. (We incorrectly only tested that commit in
desktop sizes).

Also, the width: 100% rule both did not have sufficient priority to
apply, and also exceeded the size of the input. Fix this with a hacky
!important, since there's a good chance we'll replace these inputs
with a modal or something.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1746,15 +1746,15 @@ input[type="checkbox"] {
         margin: auto;
     }
 
-    #linkifier-settings .new-linkifier-form,
-    #playground-settings .new-playground-form,
-    #profile-field-settings .new-profile-field-form {
-        width: 100%;
+    #linkifier-settings .new-linkifier-form input,
+    #playground-settings .new-playground-form input,
+    #profile-field-settings .new-profile-field-form input {
+        width: calc(100% - 20px) !important;
     }
 
-    #linkifier-settings .new-linkifier-form .control-label,
-    #playground-settings .new-playground-form .control-label,
-    #profile-field-settings .new-profile-field-form .control-label {
+    #linkifier-settings .new-linkifier-form label,
+    #playground-settings .new-playground-form label,
+    #profile-field-settings .new-profile-field-form label {
         display: block;
         width: 120px;
         padding: 0;
